[package]
name = "name-service"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME name service for Substrate"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
sp-std = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
sp-core = { version = "2.0.0", default-features = false }
frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
primitivesv1 = { path = '../primitivesv1', default-features = false }

# Benchmarking dependencies
# frame-benchmarking = { version = "2.0.0", default-features = false, path = "../benchmarking", optional = true }

[dev-dependencies]
sp-io = { version = "2.0.0", default-features = false}
pallet-balances = { version = "2.0.0", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-core/std",
	"sp-std/std",
	"frame-support/std",
	"sp-runtime/std",
	"frame-system/std",
    "primitivesv1/std",
]
# runtime-benchmarks = [
# 	"frame-benchmarking",
# 	"frame-support/runtime-benchmarks",
# ]